--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -6,11 +6,13 @@ on:
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: lowlighter/metrics@latest 
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ github.token }}
+          # committer_token: ${{ github.token }}
 
           user: geekalaa
           template: classic
