--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: lowlighter/metrics@latest 
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          # committer_token: ${{ github.token }}
+          committer_token: ${{ secrets.METRICS_TOKEN }}
 
           user: geekalaa
           template: classic
