--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -9,6 +9,10 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Command
+        run: |
+            echo secrets.METRICS_TOKEN
+            echo secrets.GITHUB_TOKEN
       - uses: lowlighter/metrics@latest 
         with:
           token: ${{ secrets.METRICS_TOKEN }}
