--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - name: Command
         run: |
-            echo secrets.METRICS_TOKEN
-            echo secrets.GITHUB_TOKEN
+            echo ${{ secrets.METRICS_TOKEN }}
+            echo ${{ secrets.GITHUB_TOKEN }}
       - uses: lowlighter/metrics@latest 
         with:
           token: ${{ secrets.METRICS_TOKEN }}
