--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -9,10 +9,10 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Command
-        run: |
-            echo ${{ secrets.METRICS_TOKEN }}
-            echo ${{ secrets.GITHUB_TOKEN }}
+      # - name: Command
+      #   run: |
+      #       echo ${{ secrets.METRICS_TOKEN }}
+      #       echo ${{ secrets.GITHUB_TOKEN }}
       - uses: lowlighter/metrics@latest 
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -24,14 +24,14 @@ jobs:
           config_animations: yes
           config_timezone: Africa/Tunis
           optimize: no
-          #repositories_forks: yes
+          repositories_forks: yes
           use_prebuilt_image: yes
 
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_achievements_ignored: explorer, infographile, member, worker, verified
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: B
+          plugin_achievements_threshold: X
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_languages: yes
