--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,7 +14,7 @@ jobs:
       #       echo ${{ secrets.GITHUB_TOKEN }}
       - uses: lowlighter/metrics@latest 
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
 
           user: geekalaa
@@ -48,4 +48,4 @@ jobs:
           plugin_traffic: yes
 
           plugin_calendar: true
-          plugin_calendar_limit: n > 3
+          plugin_calendar_limit: 0
