--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,8 +14,8 @@ jobs:
       #       echo ${{ secrets.GITHUB_TOKEN }}
       - uses: lowlighter/metrics@latest 
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          committer_token: ${{ secrets.METRICS_TOKEN }}
 
           user: geekalaa
           template: classic
