--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,7 +18,7 @@ jobs:
           committer_token: ${{ secrets.METRICS_TOKEN }} 
 
           user: geekalaa
-          template: classic
+          # template: classic
           # base: header, activity, community, repositories #, metadata
           # config_animations: yes
           config_timezone: Africa/Tunis
@@ -36,7 +36,7 @@ jobs:
           # plugin_languages: no
           # plugin_languages_details: percentage
           # plugin_languages_skipped: GOD-GOG
-          plugin_lines: yes
+          # plugin_lines: yes
           #plugin_notable: yes
           #plugin_notable_filter: stars:>100
           #plugin_notable_repositories: yes
