--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -35,6 +35,12 @@ jobs:
           # plugin_achievements_threshold: X
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
+          plugin_achievements: yes
+          plugin_achievements_only: >-
+            polyglot, stargazer, sponsor, deployer, member, maintainer, developer,
+            scripter, packager, explorer, infographile, manager
+          plugin_achievements_display: compact
+          plugin_achievements_threshold: X
           # plugin_languages: no
           # plugin_languages_details: percentage
           # plugin_languages_skipped: GOD-GOG
