--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,6 +1,6 @@
 name: Metrics
 on:
-  schedule: [{cron: "0 * * * *"}]
+  schedule: [{cron: "0 0 * * *"}]
   push: {branches: ["master", "main"]}
   workflow_dispatch:
 jobs:
@@ -8,46 +8,31 @@ jobs:
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
-      # - name: Command
-      #   run: |
-      #       echo ${{ secrets.METRICS_TOKEN }}
-      #       echo ${{ secrets.GITHUB_TOKEN }}
-      - uses: lowlighter/metrics@latest 
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Update day counter
+        run: |
+          START_DATE="2022-02-01"
+          CURRENT_DATE=$(date +%Y-%m-%d)
+          DAYS=$(python3 -c "from datetime import datetime; start = datetime.strptime('$START_DATE', '%Y-%m-%d'); now = datetime.strptime('$CURRENT_DATE', '%Y-%m-%d'); print((now - start).days)")
+          sed -i "s/<!-- DAYS_COUNT -->.*<!-- DAYS_COUNT -->/<!-- DAYS_COUNT -->$DAYS<!-- DAYS_COUNT -->/g" README.md
+
+      - name: Generate metrics
+        uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          committer_token: ${{ secrets.METRICS_TOKEN }} 
-
-          # user: geekalaa
-          # template: classic
+          committer_token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           filename: metrics.plugin.isocalendar.fullyear.svg
-          # base: header, activity, community, repositories #, metadata
-          # config_animations: yes
           config_timezone: Africa/Tunis
-          # optimize: no
-          # repositories_forks: yes
-          # use_prebuilt_image: yes
-
-          # plugin_achievements: no
-          # plugin_achievements_display: compact
-          # plugin_achievements_ignored: explorer, infographile, member, worker, verified
-          # plugin_achievements_secrets: yes
-          # plugin_achievements_threshold: X
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
-          # plugin_languages: no
-          # plugin_languages_details: percentage
-          # plugin_languages_skipped: GOD-GOG
-          # plugin_lines: yes
-          #plugin_notable: yes
-          #plugin_notable_filter: stars:>100
-          #plugin_notable_repositories: yes
-          # plugin_repositories: yes
-          # plugin_repositories_featured: geekalaa/airflow-extended-api-plugin,geekalaa/n8n,geekalaa/ccxt
-          #plugin_topics: yes
-          #plugin_topics_mode: mastered
-          #plugin_topics_limit: 20
-          # plugin_traffic: yes
 
-          # plugin_calendar: true
-          # plugin_calendar_limit: n > 2
+      - name: Commit and push if changed
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add README.md metrics.plugin.isocalendar.fullyear.svg
+          git diff --staged --quiet || git commit -m "Update day counter and metrics [skip ci]"
+          git push
